--- a/themes/default/meta/static-pages.yaml
+++ b/themes/default/meta/static-pages.yaml
@@ -31,3 +31,4 @@ static-pages:
     experiencias-aaasss: {  }
     experiencias-idiomas: {  }
     experiencias-la-magia-de-el-palmar: {  }
+    experiencias-dia-de-america: {  }
