--- a/themes/default/meta/static-pages.yaml
+++ b/themes/default/meta/static-pages.yaml
@@ -4,3 +4,5 @@ static-pages:
     comarcas:
         comarcas-la-janda: {  }
         comarcas-jaen: {  }
+        comarcas-madrid: {  }
+        comarcas-barcelona: {  }
