--- a/themes/default/meta/static-pages.yaml
+++ b/themes/default/meta/static-pages.yaml
@@ -1,5 +1,6 @@
 static-pages:
-    municipios: {  }
+    municipios:
+        municipios-marina: {  }
     comarcas: {  }
     playas: {  }
     naturaleza: {  }
