dont show municipios comarcas playas pages at editor cms contenido

--- a/themes/default/meta/static-pages.yaml
+++ b/themes/default/meta/static-pages.yaml
@@ -1,6 +1,9 @@
 static-pages:
-    municipios: {  }
-    comarcas: {  }
+    municipios:
+        municipios-uno: {  }
+        municipios-dos: {  }
+    comarcas:
+        comarcas-uno: {  }
     playas: {  }
     naturaleza: {  }
     diversion: {  }
