--- a/plugins/rainlab/pages/classes/experience/fields.yaml
+++ b/plugins/rainlab/pages/classes/experience/fields.yaml
@@ -57,7 +57,7 @@ tabs:
         viewBag[layout]:
             tab: cms::lang.editor.settings
             label: rainlab.pages::lang.page.layout
-            default: 'default'
+            default: 'experience'
             cssClass: ocl
             
         viewBag[is_hidden]:
