--- a/themes/default/meta/static-pages.yaml
+++ b/themes/default/meta/static-pages.yaml
@@ -38,3 +38,4 @@ static-pages:
         gastronomia-gourmet: {  }
         gastronomia-el-vino: {  }
         gastronomia-comida-tradicional: {  }
+    experiencias-america: {  }
