--- a/themes/default/meta/static-pages.yaml
+++ b/themes/default/meta/static-pages.yaml
@@ -75,3 +75,5 @@ static-pages:
     prensa-nacional: {  }
     eventos-evento-marina: {  }
     eventos-cuatro: {  }
+    rutas-una: {  }
+    eventos-unob: {  }
