--- a/themes/default/meta/static-pages.yaml
+++ b/themes/default/meta/static-pages.yaml
@@ -1,5 +1,4 @@
 static-pages:
-    publicaciones: {  }
     comarcas:
         comarcas-bahia-de-cadiz: {  }
         comarcas-campina-de-jerez: {  }
@@ -52,3 +51,5 @@ static-pages:
     sala-prensa: {  }
     reportaje: {  }
     prensa-nacional: {  }
+    publicaciones:
+        publicaciones-una: {  }
