--- a/themes/default/meta/menus/pie.yaml
+++ b/themes/default/meta/menus/pie.yaml
@@ -1,2 +1,32 @@
 name: ' Pie'
-items: {  }
+items:
+    -
+        title: 'Sobre nosotros'
+        nesting: ''
+        type: static-page
+        code: ''
+        reference: sobre-nosotros
+    -
+        title: 'Sala Prensa'
+        nesting: ''
+        type: static-page
+        code: ''
+        reference: sala-prensa
+    -
+        title: Publicaciones
+        nesting: ''
+        type: static-page
+        code: ''
+        reference: publicaciones
+    -
+        title: 'Necesitas ayuda'
+        nesting: ''
+        type: static-page
+        code: ''
+        reference: necesitas-ayuda
+    -
+        title: Legal
+        nesting: ''
+        type: static-page
+        code: ''
+        reference: legal
