--- a/plugins/rainlab/pages/classes/page/publicacionesfields.yaml
+++ b/plugins/rainlab/pages/classes/page/publicacionesfields.yaml
@@ -41,6 +41,11 @@ fields:
         placeholder: /
         label: 'URL para descargar el zip'
    
+    viewBag[idiomas]:
+        span: full
+        placeholder: /
+        label: 'Escribe los idiomas en los que estara disponible esta publicación para su descarga'
+
     toolbar:
         type: partial
         path: page_toolbar
