--- a/plugins/rainlab/pages/classes/page/publicacionesfields.yaml
+++ b/plugins/rainlab/pages/classes/page/publicacionesfields.yaml
@@ -29,7 +29,7 @@ fields:
 
     viewBag[descrptn]:
         span: full
-        label: 'Descripción (max 120 caracteres)'
+        label: 'Descripción (max. 120 caracteres)'
        
     viewBag[urlExternaVideo]:
         span: right
