--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "barryvdh/laravel-snappy": "^0.4.0",
         "knplabs/knp-snappy": "^1.0",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
-        "h4cc/wkhtmltoimage-amd64": "0.12.x"
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
+        "barryvdh/laravel-cors": "^0.11.0"
     }
 }
