--- a/modules/backend/models/tipo/columns.yaml
+++ b/modules/backend/models/tipo/columns.yaml
@@ -7,3 +7,7 @@ columns:
     name:
         label: Nombre
         searchable: true    
+
+    category:
+        span: right
+        label: Categoría
