--- a/modules/backend/models/tipo/fields.yaml
+++ b/modules/backend/models/tipo/fields.yaml
@@ -7,3 +7,9 @@ fields:
     name:
         span: left
         label: Nombre del tipo de empresa
+
+    category:
+        span: right
+        label: Categoría
+        type: dropdown
+        options: getCategoriasEmpresas
