--- a/modules/backend/models/tipo/fields.yaml
+++ b/modules/backend/models/tipo/fields.yaml
@@ -13,3 +13,19 @@ fields:
         label: Categoría
         type: dropdown
         options: getCategoriasEmpresas
+
+    avatar:
+        label: Imagen
+        type: fileupload
+        mode: image
+        imageHeight: 260
+        imageWidth: 260
+        thumbOptions:
+            mode: crop
+            offset:
+                - 0
+                - 0
+            quality: 90
+            sharpen: 0
+            interlace: false
+            extension: auto
