--- a/modules/backend/models/empresa/fields.yaml
+++ b/modules/backend/models/empresa/fields.yaml
@@ -17,6 +17,7 @@ fields:
         label: Tipo
         type: dropdown
         options: getTiposEmpresas
+        dropdownCssClass: select-marina
 
     email:
         span: right
