--- a/modules/backend/controllers/empresa/config_form.yaml
+++ b/modules/backend/controllers/empresa/config_form.yaml
@@ -2,7 +2,7 @@
 #  Form Behavior Config
 # ===================================
 
-name: Empresa
+name: Registro de empresa
 form: ~/modules/backend/models/empresa/fields.yaml
 modelClass: Backend\Models\Empresa
 defaultRedirect: backend/empresa
