home change field name

--- a/modules/backend/models/home/fields.yaml
+++ b/modules/backend/models/home/fields.yaml
@@ -14,7 +14,7 @@ fields:
 
     parrafo:
         span: full
-        label: Párrafo
+        label: Entradilla
 
     enlace_titulo:
         span: left
