playas Municipios especificos

--- a/plugins/rainlab/pages/classes/page/playafields.yaml
+++ b/plugins/rainlab/pages/classes/page/playafields.yaml
@@ -41,7 +41,7 @@ fields:
         label: 'Municipio'
         placeholder: 'Municipio'
         type: dropdown        
-        options: getMunicipalities
+        options: getMunicipalitiesBeaches
 
     viewBag[address]:
         span: full
