--- a/plugins/rainlab/pages/classes/page/reportajesfields.yaml
+++ b/plugins/rainlab/pages/classes/page/reportajesfields.yaml
@@ -24,10 +24,16 @@ fields:
         span: full
         label: 'Descripción (max. 120 caracteres)'
 
-    viewBag[urlExternaZip]:
+    viewBag[webInfo]:
+        placeholder: www.info.com
+        label: 'Web para mostrar info'
         span: left
-        placeholder: /
-        label: 'URL para descargar el zip'
+
+    viewBag[dateReportaje]:
+        type: datepicker
+        mode: date 
+        label: 'Fecha publicación'
+        span: right
 
     toolbar:
         type: partial
@@ -80,3 +86,12 @@ tabs:
             label: cms::lang.editor.meta_description
             type: textarea
             size: tiny
+
+secondaryTabs:
+    stretch: true
+    fields:
+        markup:
+            tab: rainlab.pages::lang.editor.content
+            type: richeditor
+            stretch: true
+            size: huge
